# cloudsentry

./: .gitignore  COMPLIANCE_REPORT.md  EXAMPLE_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  checks.py  cloudsentry.py  cloudsentry_report.json  example_tfplan.json  pyproject.toml  requirements.txt  test_cloudsentry.py  v2_LEARNING_NOTES.md
.github/actions/cloudsentry-scan/: action.yml
.github/workflows/: cloudsentry-ci.yml  notes.md  terraform-pipeline.yml
checks/: __init__.py  s3_checks.py
src/cloudsentry_cli/: __init__.py  checks.py  cli.py  scanner.py
src/cloudsentry_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_scanner.py
