[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsentry-cli"
version = "0.1.0"
description = "CloudSentry CLI – scan Terraform plan JSON for security issues before apply"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["terraform", "security", "iac", "devsecops", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# No external runtime dependencies – stdlib only
dependencies = []

[project.scripts]
cloudsentry-cli = "cloudsentry_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
